--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<iframe id="igraph" style='border:none' src="https://plot.ly/~JZeelenberg/3/simple-lineplot/" width="800px" height=800px></iframe>
 </body>
 </html>
